tests/generated/174_urlizetrunc.out
Fatal error: Call to undefined method DtlIter::urlizetrunc() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/174_urlizetrunc.php on line 4